fix html truncate, deploy problem

--- a/app/assets/stylesheets/blogs.css.scss
+++ b/app/assets/stylesheets/blogs.css.scss
@@ -19,8 +19,6 @@
 }
 
 body {
-
-
   background: #fafafa;
   max-width: 100%;
   font-family: "Arapey",serif;
@@ -72,10 +70,12 @@ body {
 
 .blog_entries {
   font-size: 1.2em;
+  font-family: 'Verdana', 'Arial', 'Open Sans', sans-serif;
 }
 
 .blog_entry {
   font-size: 1.2em;
+  font-family: 'Verdana', 'Arial', 'Open Sans', sans-serif;
   .date {
     font-style: italic;
   }
